Closed
Bug 25303
Opened 25 years ago
Closed 25 years ago
FILE/FTP dir listings broken
Categories
(Core :: Networking, defect, P1)
Tracking
()
VERIFIED
FIXED
M14
People
(Reporter: jud, Assigned: waterson)
References
Details
(Whiteboard: [PDT+] fix ready)
Attachments
(1 file)
|
19.83 KB,
patch
|
Details | Diff | Splinter Review |
you get two tree widgets in the window and neither fill in.
Updated•25 years ago
|
Severity: normal → blocker
| Assignee | ||
Comment 1•25 years ago
|
||
looking...
Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: M14
| Assignee | ||
Comment 3•25 years ago
|
||
looks like tree/table incremental reflow or crappy XUL, because the result show
up as soon as I resize the window. hyatt! help me!
Status: NEW → ASSIGNED
Updated•25 years ago
|
Summary: FTP dir listings broken → [blocker] FTP dir listings broken
| Assignee | ||
Comment 4•25 years ago
|
||
waaah! fix my crappy XUL for me hyatt.
http://lxr.mozilla.org/mozilla/source/xpfe/components/directory/directory.xul
it's not dealing with the case where content is incrementally reflowed b/c of
async arrival.
Assignee: waterson → hyatt
Status: ASSIGNED → NEW
Comment 5•25 years ago
|
||
The XUL looks good to me.
Comment 6•25 years ago
|
||
I see this happening to the sidebar as well. The tree isn't duplicated, but it
is truncated halfway down the screen just like the FTP dirs. Related? See bug
25334.
Comment 7•25 years ago
|
||
I didn't touch the tree widget code yesterday. karnaze or troy, were any
changes made to incremental table reflow that I don't know about?
Updated•25 years ago
|
Status: NEW → ASSIGNED
Comment 8•25 years ago
|
||
I did a checkin around 6pm but that was after the bug. Prior to that, I hadn't
checked anything in for more than a few days due to smoke test bustage.
Comment 9•25 years ago
|
||
Yeah, I'm suspecting something random and weird... not tree or table-related.
Comment 10•25 years ago
|
||
Resize the window, and it shows up fine. I'm removing the blocker designation,
since that's only valid if it's preventing you from getting work done. It
isn't.
Summary: [blocker] FTP dir listings broken → FTP dir listings broken
| Reporter | ||
Comment 11•25 years ago
|
||
changing summary from "FTP dir listings broken"
Summary: FTP dir listings broken → FILE/FTP dir listings broken
Comment 13•25 years ago
|
||
Updating QA Contact.
Component: Browser-General → Networking
QA Contact: nobody → tever
Comment 14•25 years ago
|
||
Updating QA Contact.
Comment 15•25 years ago
|
||
*** Bug 26465 has been marked as a duplicate of this bug. ***
Comment 16•25 years ago
|
||
Letting waterson investigate notifications, and other stuff... make sure it's
not the trees fault (or is the trees fault)....
Assignee: hyatt → waterson
Status: ASSIGNED → NEW
| Assignee | ||
Comment 17•25 years ago
|
||
*** Bug 26656 has been marked as a duplicate of this bug. ***
Comment 19•25 years ago
|
||
Is this bug fixed?
Updated•25 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [PDT+] → [PDT+] Haven't investigated yet. Don't know what's still broken.
Comment 20•25 years ago
|
||
Sorry, I'm giving this back. The assertion in today's build in nsIOService is
actually helpful to me, since it indicates to me that you're not telling me any
contents to display, e.g., when you first bring up "c:\", the tree widget is
there but empty.
It's obviously the right height, since the sort column goes all the way down the
window. If I resize the window, thereby forcing a reflow, then you go out to
Necko and fetch data (and then I hit the nsIOService assertion). This indicates
to me that you didn't actually go get any data to give to the tree.
So I don't think this is a tree widget bug. I still think it's a notification
bug.
Assignee: hyatt → waterson
Status: ASSIGNED → NEW
Comment 21•25 years ago
|
||
BTW, the ability to follow the folders as links is preposterously sexy.
| Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 22•25 years ago
|
||
The broken-ness is coming from XUL sorting. I'd put in a bunch of code to find
the "first generated element". Unfortunately, it doesn't take into account the
fact that the first element you create might not necessarily end up being the
first element in the container. Zoiks!
| Assignee | ||
Updated•25 years ago
|
Whiteboard: [PDT+] Haven't investigated yet. Don't know what's still broken. → [PDT+] fix ready
| Assignee | ||
Comment 23•25 years ago
|
||
| Assignee | ||
Comment 24•25 years ago
|
||
per hyatt's suggestion, remember the container and the index instead of the
first node created. r=rjc. I'll check it in when the tree gets green.
| Assignee | ||
Comment 25•25 years ago
|
||
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•