Bug 25303. Remember container into which content was inserted and the index of first insertion, rather than the first element that was inserted. With the latter approach, we were sending incorrect ContentAppended notifications to layout when the insertion sort would move the position of the 'first' inserted element. r=rjc@netscape.com.